@@ -1,68 +1,48 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.service.UserDetailsService;
 
+import java.util.Map;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(StatementOfServiceController.class)
 @OverrideAutoConfiguration(enabled = true)
-class StatementOfServiceControllerTest {
-
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final ObjectMapper MAPPER = new ObjectMapper();
+class StatementOfServiceControllerTest extends AbstractControllerTest {
 
     @MockBean
     private UserDetailsService userDetailsService;
 
-    @Autowired
-    private MockMvc mockMvc;
+    StatementOfServiceControllerTest() {
+        super("statement-of-service");
+    }
 
     @BeforeEach
     void mockUserNameRetrieval() {
-        given(userDetailsService.getUserName(AUTH_TOKEN)).willReturn("Emma Taylor");
+        given(userDetailsService.getUserName(userAuthToken)).willReturn("Emma Taylor");
     }
 
     @Test
-    void shouldPrepopulateRecipient() throws Exception {
-        CallbackRequest request = CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .data(ImmutableMap.of("data", "some data"))
-                .build())
+    void shouldPrepopulateRecipient() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of("data", "some data"))
             .build();
 
-        MvcResult response = mockMvc
-            .perform(post("/callback/statement-of-service/about-to-start")
-                .header("authorization", AUTH_TOKEN)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(MAPPER.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = MAPPER.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
 
         assertThat(callbackResponse.getData())
-                    .containsKey("statementOfService")
-                    .containsEntry("serviceDeclarationLabel", "I, Emma Taylor, have served the documents as stated.");
+            .containsKey("statementOfService")
+            .containsEntry("serviceDeclarationLabel", "I, Emma Taylor, have served the documents as stated.");
     }
 }
 
